syntax = "proto3";

option go_package = "github.com/manaaan/ekolivs-oms/product/api";

import "google/protobuf/empty.proto";

service ProductService {
  rpc GetProducts(google.protobuf.Empty) returns (ProductsRes) {}
  rpc UpdateProducts(Product) returns (Product) {}
}

message ProductsRes {
  repeated Product products = 1;
}

message Product {
  string ID = 1;
  string name = 2;
  optional string sku = 3;
  optional string barcode = 4;
  // Sales price
  Price price = 5;
  // Purchase price from supplier
  Price costPrice = 6;
  optional string imageUrl = 7;
  optional string vatPercentage = 8;
  Status status = 9;
  UnitType unitType = 10;
  optional string createdAt = 11;
  optional string updatedAt = 12;
}

message Price {
  // Response with last 2 digits as decimals
  int64 amount = 1;
  // Default "SEK"
  string currencyID = 2;
}

enum Status {
  ACTIVE = 0;
  HIDDEN = 1;
}

enum UnitType {
  // pieces
  PIECES = 0;
  GRAMS = 1;
  KILOGRAMS = 2;
  LITER = 3;
  MILLILITER = 4;
}
